...
    <string name="transaction_memo">Memo</string>
    <string name="transaction_memo_hint">\u2517 Additional information</string>
    <string name="transaction_repeat">Repeat</string>
    <string name="transaction_title">Title</string>
    <string name="transaction_title_hint">\u2517 Location of purchase</string>
    <string name="transaction_total">Total</string>
    <string name="type_expense">Expense</string>
    <string name="type_income">Income</string>
    <string name="categories">Categories</string>
    <string name="alert_dialog_edit_account">Edit Account</string>
    <string name="alert_dialog_input_hint">Enter A Name</string>
    <string name="alert_dialog_create_account">Create Account</string>
    <string name="alert_dialog_edit_category">Edit Category</string>
    <string name="alert_dialog_create_category">Create Category</string>
    <string name="alert_dialog_delete_account">Delete Account</string>
    <string name="alert_dialog_delete_category">Delete Category</string>
    <string name="alert_dialog_delete_transaction">Delete Transaction</string>
    <string name="snackbar_exists">%1$s already exists!</string>
    <string name="alert_dialog_duplicate_symbols">Duplicate Symbols</string>
    <string name="alert_dialog_duplicate_symbols_warning">The thousands and decimal separators cannot be the same, would you like to switch them?</string>
    <string name="accounts">Accounts</string>
    <string name="account_new">New Account</string>
    <string name="category_new">New Category</string>
    <string name="cfl_menu_transaction">New Transaction</string>
...
    <string name="preferences_view_monthly">Monthly</string>
    <string name="preferences_view_weekly">Weekly</string>
    <string name="preferences_view_daily">Daily</string>

    <string name="tt_about_file" translatable="false">File %1$s</string>
    <string name="tt_ad" translatable="false">AlertDialog</string>
    <string name="tt_ad_confirm" translatable="false">AlertDialog Confirm</string>
    <string name="tt_ad_dismiss" translatable="false">AlertDialog Dismiss</string>
    <string name="tt_ad_option" translatable="false">AlertDialog Option %1$s</string>
    <string name="tt_ad_input" translatable="false">AlertDialog Input</string>
    <string name="tt_app_bar" translatable="false">AppBar</string>
    <string name="tt_app_barTitle" translatable="false">AppBar %1$s</string>
    <string name="tt_app_drawItem" translatable="false">DrawerItem %1$s</string>
    <string name="tt_app_scaffold" translatable="false">PWApp Scaffold</string>
...
    <string name="tt_filter_card" translatable="false">Filter Card</string>
    <string name="tt_filter_chip" translatable="false">Chip: %1$s</string>
    <string name="tt_filter_end" translatable="false">Filter End Date</string>
    <string name="tt_filter_start" translatable="false">Filter Start Date</string>
    <string name="tt_filter_type" translatable="false">%1$s Button</string>
    <string name="tt_list_delete" translatable="false">%1$s Delete</string>
    <string name="tt_list_edit" translatable="false">%1$s Edit</string>
    <string name="tt_list_sub" translatable="false">List Subtitle %1$s</string>
    <string name="tt_list_vp" translatable="false">List ViewPager</string>
    <string name="tt_set_name" translatable="false">%1$s</string>
    <string name="tt_set_select" translatable="false">%1$s %2$s</string>
    <string name="tt_tran_ddmItem" translatable="false">DropdownMenuItem %1$s</string>
    <string name="tt_tranL_empty" translatable="false">Empty Transaction List</string>
    <string name="tt_tranL_item" translatable="false">TranList item %1$d</string>
</resources>
